--- a/Notebook combo.ipynb
+++ b/Notebook combo.ipynb
@@ -17,12 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6c91b87d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load book_of_functions.py\n"
+    "%load book_of_functions.py\n",
+    "%run book_of_functions.py"
    ]
   },
   {
@@ -88,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
