aggiunto esempio di import kaggle

--- a/Notebook combo.ipynb
+++ b/Notebook combo.ipynb
@@ -18,6 +18,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aeba4013",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !kaggle datasets download -d dorbicycle/world-foodfeed-production\n",
+    "# !kaggle datasets download -d selfvivek/environment-impact-of-food-production"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6c91b87d",
    "metadata": {},
    "outputs": [],
